tests/interpreter/errors/field_access_non_object.mochi
let x = 42
print(x.name) // 42 is not an object