tests/interpreter/errors/field_access_non_object.err
error[I001]: cannot access field 'name' on non-object of type int
  --> tests/interpreter/errors/field_access_non_object.mochi:2:7

  2 | print(x.name) // 42 is not an object
    |       ^

help:
  Use a map-like object to access fields.